Corregido errores de rutas y acceso a las imagenes

--- a/views/lovelace.html
+++ b/views/lovelace.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>ADA LOVELACE</h1>
-    <H3>Augusta Ada King, condesa de Lovelace (Londres, 10 de diciembre de 1815-íd., 27 de noviembre de 1852), estuvo registrada al nacer como Augusta Ada Byron y conocida habitualmente como Ada Lovelace, fue una matemática y escritora británica, célebre sobre todo por su trabajo acerca de la calculadora de uso general de Charles Babbage, la denominada máquina analítica. Entre sus notas sobre la máquina, se encuentra lo que se reconoce hoy como el primer algoritmo destinado a ser procesado por una máquina, por lo que se la considera como la primera programadora de ordenadores.</H3>
-    <img src="/img/Ada_Lovelace.jpg" alt="">
-    <br><a href="index.html">Regresar al indice</a>
+    <p>Augusta Ada King, condesa de Lovelace (Londres, 10 de diciembre de 1815-íd., 27 de noviembre de 1852), estuvo registrada al nacer como Augusta Ada Byron y conocida habitualmente como Ada Lovelace, fue una matemática y escritora británica, célebre sobre todo por su trabajo acerca de la calculadora de uso general de Charles Babbage, la denominada máquina analítica. Entre sus notas sobre la máquina, se encuentra lo que se reconoce hoy como el primer algoritmo destinado a ser procesado por una máquina, por lo que se la considera como la primera programadora de ordenadores.</p>
+    <img src="Ada_Lovelace.jpg" alt="">
+    <br><a href="/home">Regresar al indice</a>
 </body>
 </html>
