--- a/views/berners-lee.html
+++ b/views/berners-lee.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>TIM BERNERS-LEE</h1>
-    <H3>Timothy "Tim" John Berners-Lee (Londres, Reino Unido, 8 de junio de 1955), conocido como Tim Berners-Lee, es un científico de la computación británico, conocido por ser el padre de la World Wide Web. Estableció la primera comunicación entre un cliente y un servidor usando el protocolo HTTP en diciembre de 1990. En octubre de 1994 fundó el Consorcio de la World Wide Web (W3C) con sede en el MIT, para supervisar y estandarizar el desarrollo de las tecnologías sobre las que se fundamenta la Web y que permiten el funcionamiento de Internet.</H3>
-    <img src="/img/Berners-Lee.jpg" alt="">
-    <br><a href="index.html">Regresar al indice</a>
+    <p>Timothy "Tim" John Berners-Lee (Londres, Reino Unido, 8 de junio de 1955), conocido como Tim Berners-Lee, es un científico de la computación británico, conocido por ser el padre de la World Wide Web. Estableció la primera comunicación entre un cliente y un servidor usando el protocolo HTTP en diciembre de 1990. En octubre de 1994 fundó el Consorcio de la World Wide Web (W3C) con sede en el MIT, para supervisar y estandarizar el desarrollo de las tecnologías sobre las que se fundamenta la Web y que permiten el funcionamiento de Internet.</p>
+    <img src="Berners-Lee.jpg" alt="">
+    <br><a href="/home">Regresar al indice</a>
 </body>
 </html>
