--- a/views/clarke.html
+++ b/views/clarke.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>JOAN CLARKE</h1>
-    <H3>Joan Elisabeth Lowther Murray, nacida como Joan Elisabeth Lowther Clarke (Londres, 24 de junio de 1917 – Oxford, 4 de septiembre de 1996) fue una criptoanalista y numismática británica que trabajó en Bletchley Park durante la Segunda Guerra Mundial.
-Fue la única mujer que trabajó en el equipo del matemático Alan Turing en el proyecto Enigma, que desencriptó las comunicaciones secretas de la Alemania nazi. Su papel en este proceso le valió premios y citaciones, como el nombramiento como miembro de la Orden del Imperio Británico (MBE), en 1946.</H3>
-    <img src="/img/clarke.jpg" alt="">
-    <br><a href="index.html">Regresar al indice</a>
+    <p>Joan Elisabeth Lowther Murray, nacida como Joan Elisabeth Lowther Clarke (Londres, 24 de junio de 1917 – Oxford, 4 de septiembre de 1996) fue una criptoanalista y numismática británica que trabajó en Bletchley Park durante la Segunda Guerra Mundial.
+Fue la única mujer que trabajó en el equipo del matemático Alan Turing en el proyecto Enigma, que desencriptó las comunicaciones secretas de la Alemania nazi. Su papel en este proceso le valió premios y citaciones, como el nombramiento como miembro de la Orden del Imperio Británico (MBE), en 1946.</p>
+    <img src="clarke.jpg" alt="">
+    <br><a href="/home">Regresar al indice</a>
 </body>
 </html>
