--- a/views/hamilton.html
+++ b/views/hamilton.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>MARGARET HAMILTON</h1>
-    <H3>Margaret Hamilton 17 de agosto de 1936 (edad 84 años), Paoli, Indiana, Estados Unidos es una científica computacional, matemática e ingeniera de Software. Fue directora de la División de Ingeniería de Software del Laboratorio de Instrumentación del MIT, ​ donde con su equipo desarrolló el software de navegación "on-board" para el Programa Espacial Apolo.​​​</H3>
-    <img src="/img/Margaret_Hamilton.gif" alt="">
-    <br><a href="index.html">Regresar al indice</a>
+    <p>Margaret Hamilton 17 de agosto de 1936 (edad 84 años), Paoli, Indiana, Estados Unidos es una científica computacional, matemática e ingeniera de Software. Fue directora de la División de Ingeniería de Software del Laboratorio de Instrumentación del MIT, ​ donde con su equipo desarrolló el software de navegación "on-board" para el Programa Espacial Apolo.​​​</p>
+    <img src="Margaret_Hamilton.gif" alt="">
+    <br><a href="/home">Regresar al indice</a>
 </body>
 </html>
