--- a/views/hopper.html
+++ b/views/hopper.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>GRACE MURRAY HOPPER</h1>
-    <H3>Grace Murray Hopper (Nueva York, 9 de diciembre de 1906 - Condado de Arlington, 1 de enero de 1992) fue una científica de la computación y militar estadounidense con grado de contraalmirante. Fue pionera en el mundo de las ciencias de la computación y la primera programadora que utilizó el Mark I. Entre las décadas de los 50 y 60 desarrolló el primer compilador para un lenguaje de programación así como también propició métodos de validación. </H3>
-    <img src="/img/Grace_M._Hopper.jpg" alt="">
-    <br><a href="index.html">Regresar al indice</a>
+    <p>Grace Murray Hopper (Nueva York, 9 de diciembre de 1906 - Condado de Arlington, 1 de enero de 1992) fue una científica de la computación y militar estadounidense con grado de contraalmirante. Fue pionera en el mundo de las ciencias de la computación y la primera programadora que utilizó el Mark I. Entre las décadas de los 50 y 60 desarrolló el primer compilador para un lenguaje de programación así como también propició métodos de validación. </p>
+    <img src="Grace_M._Hopper.jpg" alt="">
+    <br><a href="/home">Regresar al indice</a>
 </body>
 </html>
