--- a/views/index.html
+++ b/views/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
 
+    <h2>Menù de Navegaciòn</h2>
+
     <ul>
-        <li><a href="babbage.html">Babbage</a></li>
-        <li><a href="berners-lee.html">Berners Lee</a></li>
-        <li><a href="clarke.html">Clarke</a></li>
-        <li><a href="hamilton.html">Hamilton</a></li>
-        <li><a href="hopper.html">Hopper</a></li>
-        <li><a href="lovelace.html">Lovelace</a></li>
-        <li><a href="turing.html">Turing</a></li>
+        <li><a href="/babbage">Babbage</a></li>
+        <li><a href="/berners-lee">Berners Lee</a></li>
+        <li><a href="/clarke">Clarke</a></li>
+        <li><a href="/hamilton">Hamilton</a></li>
+        <li><a href="/hopper">Hopper</a></li>
+        <li><a href="/lovelace">Lovelace</a></li>
+        <li><a href="/turing">Turing</a></li>
     </ul>
     
 </body>
