--- a/views/turing.html
+++ b/views/turing.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>ALAN TURING</h1>
-    <H3>Alan Mathison Turing (Paddington, Londres; 23 de junio de 1912-Wilmslow, Cheshire; 7 de junio de 1954), fue un matemático, lógico, informático teórico, criptógrafo, filósofo, biólogo teórico, maratoniano y corredor de ultradistancia británico.1​2​3​4​5​
+    <p>Alan Mathison Turing (Paddington, Londres; 23 de junio de 1912-Wilmslow, Cheshire; 7 de junio de 1954), fue un matemático, lógico, informático teórico, criptógrafo, filósofo, biólogo teórico, maratoniano y corredor de ultradistancia británico.1​2​3​4​5​
 
-        Es considerado uno de los padres de la ciencia de la computación y precursor de la informática moderna. Proporcionó una influyente formalización de los conceptos de algoritmo y computación: la máquina de Turing. Formuló su propia versión que hoy es ampliamente aceptada como la tesis de Church-Turing </H3>
-    <img src="/img/Alan_Turing.jpg" alt="">
-    <br><a href="index.html">Regresar al indice</a>
+        Es considerado uno de los padres de la ciencia de la computación y precursor de la informática moderna. Proporcionó una influyente formalización de los conceptos de algoritmo y computación: la máquina de Turing. Formuló su propia versión que hoy es ampliamente aceptada como la tesis de Church-Turing </p>
+    <img src="Alan_Turing.jpg" alt="">
+    <br><a href="/home">Regresar al indice</a>
 </body>
 </html>
